# Kairon

./: .gitignore  .gitmodules  .gitmodules.bak  Cargo.toml  Kairon.code-workspace  Kairon.sln  README.md  premake5.lua  sites.txt
Kairon/: Kairon.vcxproj  Kairon.vcxproj.filters
Kairon/src/: Kairon.h  hzpch.h
Kairon/src/Kairon/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  Window.h
Kairon/src/Kairon/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Kairon/src/Kairon/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Kairon/src/Kairon/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
Kairon/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h
Kairon/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
SandBox/: SandBox.vcxproj  imgui.ini
SandBox/src/: SandBoxApp.cpp
crates/app/: Cargo.toml
crates/app/src/: app.rs  state.rs
crates/kairon/: Cargo.toml
crates/kairon/src/: main.rs
crates/tales/: Cargo.toml
crates/ui/: Cargo.toml
crates/ui/src/: ui.rs
crates/window_handler/: Cargo.toml
crates/window_handler/src/: window_handler.rs
kairon/: Cargo.toml
kairon/src/: main.rs
src/: main.rs
src/app/: app.rs
src/egui_winit_platform/: egui_winit_platform.rs
src/gui/: gui.rs
src/state/: state.rs
src/window_handler/: window_handler.rs
