[package]
name = "kairon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_wgpu_backend = "0.27.0"
egui = "0.25.0"
epi = "0.17.0"
#egui_winit_platform = "0.20.0"
wgpu = "0.18.0"
winit = { version = "0.29.4", features = ["rwh_05"] }
egui_demo_lib = "0.24.0"
cgmath = "0.18.0"
glyphon = "0.3.0"
chrono = "0.4.31"
pollster = "0.3.0"
log = "0.4.8"
env_logger = "0.10.1"
copypasta = "0.10.0"
webbrowser = "0.8.12"