[package]
name = "ui"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "ui"
path = "src/ui.rs"

[dependencies]
chrono.workspace = true
egui_winit_platform.workspace = true
egui_wgpu_backend.workspace = true
egui.workspace = true
wgpu.workspace = true
winit.workspace = true
egui_demo_lib.workspace = true
log.workspace = true

[features]
default = []
