[package]
name = "window_handler"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "window_handler"
path = "src/window_handler.rs"

[dependencies]
chrono.workspace = true
app.workspace = true
winit.workspace = true
log.workspace = true
env_logger.workspace = true
wgpu.workspace = true

[features]
default = []
